--- a/Projects/Searchify.Api/Searchify.Api.csproj
+++ b/Projects/Searchify.Api/Searchify.Api.csproj
@@ -13,4 +13,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Elastic.Clients.Elasticsearch" Version="9.1.5" />
+    </ItemGroup>
+
 </Project>
