--- a/Projects/Searchify.Api/Searchify.Api.csproj
+++ b/Projects/Searchify.Api/Searchify.Api.csproj
@@ -14,7 +14,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Carter" Version="9.0.0" />
       <PackageReference Include="Elastic.Clients.Elasticsearch" Version="9.1.5" />
+      <PackageReference Include="FluentValidation" Version="12.0.0" />
     </ItemGroup>
 
 </Project>
