--- a/Projects/Searchify.Api/Searchify.Api.csproj
+++ b/Projects/Searchify.Api/Searchify.Api.csproj
@@ -17,6 +17,9 @@
       <PackageReference Include="Carter" Version="9.0.0" />
       <PackageReference Include="Elastic.Clients.Elasticsearch" Version="9.1.5" />
       <PackageReference Include="FluentValidation" Version="12.0.0" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+      <PackageReference Include="Scalar.AspNetCore" Version="2.6.9" />
     </ItemGroup>
 
 </Project>
