--- a/Projects/Searchify.Api/appsettings.json
+++ b/Projects/Searchify.Api/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ElasticSearchConfiguration": {
+    "Url": "http://localhost:9200"
+  }
 }
